--- a/yao.yun/index.html
+++ b/yao.yun/index.html
@@ -14,22 +14,23 @@
     		left: 20px;
     		display: flex;
     		width: 100%;
-    		height: 15vh;
+    		height: 100px;
     		margin: auto;
     		align-items: center;
     	}
     	.logo {
-    		padding-top:;
+    		padding-left:;
     		cursor: pointer;
 
     	}
     	nav {
     		/*position: relative;
-    		right: 20px;*/
+    		right: 20px;*/color: #000;
 
     		flex: 1;
     		padding-left: 700px;
     	}
+
     	nav li {
     		display: flex;
     		align-items: left;
@@ -63,23 +64,47 @@
     		color: white;
     		font-size: 24px;
     		text-align: center;
-    		padding-bottom: 5px;
+    		margin-top: 40px;
+            padding-bottom: 15px;
     	}
     	.step {
     		display: flex;
     		background-color: #ffffff;
     		padding-top: 50px;
-    		padding-left: 100px ;
-    		padding-right: 100px ;
+    		padding-left: 300px ;
+    		padding-right: 180px ;
     		font-family: "Hammersmith One";
     		color: #f62149;
     		font-size: 18px;
     	}
+        .step2{
+            display: flex;
+            background-color: #ffffff;
+            padding-top: 60px;
+            padding-left: 70%;
+            font-family: "Hammersmith One";
+            color: #f62149;
+            font-size: 18px;
+        }
+        .step3{
+            display: flex;
+            background-color: #ffffff;
+            padding-top: 60px;
+            padding-left: 10%;
+            font-family: "Hammersmith One";
+            color: #f62149;
+            font-size: 18px;
+        }
         .matcha {
-            display: block;
-            padding-right
+            display: block;           
+
         }
 
+        .onigiri {
+            display: block;
+
+            
+}
         .footer {
             width: 100px;
             height: 100px;
@@ -151,9 +176,12 @@
             <img src="./images/p1.jpg" width="270px">
         </div>      
 <!-- recipe1 end -->  
+<div class="divider">
+    <p></p>
+</div>
 <!-- recipe2 start -->  
 <div class="matcha">
-    <div class="step">
+    <div class="step2">
         <h1>2.Matcha Spread</h1>
         <img>
         <p></p>
@@ -162,7 +190,7 @@
     <div class="">
         <div class="step">
             <img src="./images/p5.jpg" width="320px">
-            <p>1. Add 2 teaspoon of matcha powder and 2 teaspoon<br> of boil water to make a thick paste</p>          
+            <p>1. Add 2 teaspoon of matcha powder and 2 teaspoon<br> of boil water to make a thick paste.</p>          
         </div>      
     </div>
 
@@ -189,11 +217,12 @@
  <!-- recipe2 end --> 
  <!-- recipe3 start --> 
  <div class="onigiri">
-    <div class="step">
+    <div class="step3">
         <h1>3.Cheesy Onigiri</h1>
         <img>
         <p></p>
     </div>
+</div>
 
     <div class="">
         <div class="step">
