--- a/yao.yun/index.html
+++ b/yao.yun/index.html
@@ -3,15 +3,17 @@
 <head>
    <meta charset="UTF-8">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>product_page</title>
+   <title>landing page</title>
    <link rel="stylesheet" href="lib/css/styleguide.css">
    <link rel="stylesheet" href="css/storetheme.css">
 </head>
 <body>
    <header class="navbar">
         <div class="container display-flex flex-aligh-center">
-           <div>
-              <h1>Coffee Shop</h1>
+           <div class="logo">
+              <a href="">
+                 <img src="images/logo1.png" width="100px">
+               </a>
            </div>
 
            <nav class="nav flex-none">
@@ -26,7 +28,7 @@
    </header>
 
    <div class="view-window" >
-      <img src="images/pattern.jpg" width="100%">
+      <img src="images/c4.jpg" width="100%">
       <h2>PRODUCT</h2>
    </div>
 
