save non-tested version

--- a/yao.yun/index_old.html
+++ b/yao.yun/index_old.html
@@ -10,6 +10,7 @@
 </head>
 <body>
    <header class="navbar">
+      <h1>Live Extension</h1>
         <div class="container display-flex">
            <div class="logo flex-none">
               <a href="index.html">
