--- a/yao.yun/recipes/index.html
+++ b/yao.yun/recipes/index.html
@@ -6,10 +6,11 @@
 	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Hammersmith One">
     <style>
     	body {
-    		background-color: #faeff3;
+    		/*background-color: #faeff3;*/
+            background-color: #fff;
  /*aaa*/
     	}
-    	.navbar { 
+    	.navbar {  
     		position: relative;
     		left: 20px;
     		display: flex;
