--- a/yao.yun/styleguide/index.html
+++ b/yao.yun/styleguide/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>styleguide</title>
     
-    <!--<base href="/aau/wnm608/yao.yun/product_page/">-->
+   <!--  <base href="/aau/wnm608/yao.yun/product_page/"> -->
     <base href="../">
     <link rel="stylesheet" href="lib/css/styleguide.css">
     <link rel="stylesheet" href="css/storetheme.css">
@@ -17,7 +17,7 @@
 <header class="navbar">
    <div class="container display-flex">
       <div class="flex-none">
-         <h1>Styleguide</h1>
+         <h1>Styleguide-in-src</h1>
       </div>
       <div class="flex-stretch"></div>
       <nav class="nav flex-none">
