responsive nav bar

--- a/yao.yun/styleguide/index.html
+++ b/yao.yun/styleguide/index.html
@@ -408,10 +408,10 @@ document.write(`
       <div class="display-flex">
          <div class="flex-stretch"></div>
          <div class="flex-none">
-            <button type="button" class="form-button sell">Confirm</button>
+            <button type="button" class="form-button bold">Confirm</button>
          </div>
          <div class="flex-none" style="margin-left:0.2em">
-            <button type="button" class="form-button sell">Cancel</button>
+            <button type="button" class="form-button simple">Cancel</button>
          </div>
       </div>
 
